--- a/ch03/CMakeLists.txt
+++ b/ch03/CMakeLists.txt
@@ -22,12 +22,14 @@ ADD_EXECUTABLE(finiteautomata
                non-deterministic-finite-automata.hh
                regex-lexer.hh
                regex-parser.hh
+               regex-ast.hh
                regex-parser-ast.hh
                finite-automata.cc
                deterministic-finite-automata.cc
                non-deterministic-finite-automata.cc
                regex-lexer.cc
                regex-parser.cc
+               regex-ast.cc
                regex-parser-ast.cc
                automata-main.cc)
 ADD_EXECUTABLE(knuth-morris-pratt knuth-morris-pratt.cc)
